@@ -72,6 +72,7 @@
     <Compile Include="InternalTypes.cs" />
     <Compile Include="PatchMay12-2010.cs" />
     <Compile Include="PatchSoD.cs" />
+    <Compile Include="PatchTestJune24-2010.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
